8153835: Fix range of flag MaxDirectMemorySize which is parsed at jlong

Changed MaxDirectMemorySize type to uint64_t and set max to max_jlong

Reviewed-by: goetz, simonis